--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <!-- <base href="/"> -->
+  <base href="https://sminth.github.io/pyclub/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -37,7 +38,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3493298432';
+    var serviceWorkerVersion = '1794614909';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
